@@ -237,13 +237,6 @@
                 <version>3.1.1</version>
                 <configuration>
                     <mainClass>${mainClass}</mainClass>
-                    <executable>java</executable>
-                    <arguments>
-                        <argument>--enable-preview</argument>
-                        <argument>-classpath</argument>
-                        <classpath/>
-                        <argument>${mainClass}</argument>
-                    </arguments>
                 </configuration>
             </plugin>
         </plugins>
